Tests/Modules/Error/Multilingual/.build/catchicelandic.pr
{
  "name": "CatchIcelandic",
  "description": "Sets the %caughtIcelandic% variable to true.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %caughtIcelandic% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%caughtIcelandic%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/CatchIcelandic.goal",
  "prPath": "/.build/catchicelandic.pr",
  "hash": "6344b0e654e98037daab29cea8946dd188c6aa4167017e8e0008457d04b8af37",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}